[package]
name = "glyph-bbox-render"
version = "0.1.0"
authors = ["Mihir Singh <git.service@mihirsingh.com>"]
edition = "2018"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*",
    "assets/web/index.html",
    "assets/web/main.js",
    "assets/web/vendor/raphael/raphael.min.js",
]
license = "Unlicense"
description = "glyph bbox dataset and bbox rendering"
homepage = "https://src.doom.fm/citruspi/glyph-bbox-render"
repository = "https://src.doom.fm/citruspi/glyph-bbox-render"
keywords = ["rendering", "bbox", "bounding box", "glyph"]
categories = ["rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33.0"
glyph-bbox = "0.1.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rust-embed = "5.5.1"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
warp = "0.2.2"